--- a/api/package.json
+++ b/api/package.json
@@ -2,12 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
-    "start": "node -r dotenv/config dist/index.js",
+    "start": "node --env-file=.env dist/app/server.js",
     "build": "tsc",
-    "dev": "tsx watch --clear-screen=false -r dotenv/config src/index.ts ",
+    "dev": "tsx watch --env-file=.env --clear-screen=false src/app/server.ts",
+    "prisma:generate": "npx prisma generate --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
+    "prisma:migrate:dev": "npx prisma migrate dev --name init --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
+    "prisma:db:push": "npx prisma db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -27,9 +30,11 @@
   },
   "homepage": "https://github.com/julinuzzo19/Backend#readme",
   "dependencies": {
+    "@prisma/client": "^6.16.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "prisma": "^6.16.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.8"
   },
