--- a/api/package.json
+++ b/api/package.json
@@ -37,12 +37,14 @@
     "helmet": "^8.1.0",
     "prisma": "^6.16.1",
     "uuid": "^13.0.0",
+    "winston": "^3.17.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
+    "@types/winston": "^2.4.4",
     "jest": "^30.1.3",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.1",
