--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -7,7 +7,8 @@
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true,
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "isolatedModules": true,
     },
     "display": "Recommended",
     "$schema": "https://json.schemastore.org/tsconfig"
