--- a/api/package.json
+++ b/api/package.json
@@ -12,12 +12,15 @@
     "prisma:migrate:dev": "npx prisma migrate dev --name init --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:db:push": "npx prisma db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:migrate:reset": "npx prisma migrate reset --force --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:unit": "jest tests/unit",
-    "test:integration": "jest tests/integration",
-    "test:e2e": "jest tests/e2e"
+    "test": "jest --config=tests/setup/jest.config.cjs",
+    "test:watch": "jest --config=tests/setup/jest.config.cjs --watch",
+    "test:coverage": "jest --verbose  --config=tests/setup/jest.config.cjs --coverage",
+    "test:unit": "jest --verbose --config=tests/setup/jest.config.cjs --selectProjects unit",
+    "test:integration": "jest --config=tests/setup/jest.config.cjs --selectProjects integration",
+    "test:e2e": "cross-env NODE_ENV=test jest --verbose --config=tests/setup/jest.config.cjs --selectProjects e2e --runInBand",
+    "test:e2e:docker": "node scripts/test-e2e.cjs",
+    "test:e2e:fresh": "npm run test:e2e:stop && npm run test:e2e:docker",
+    "test:e2e:stop": "docker stop postgres-test && docker rm postgres-test"
   },
   "repository": {
     "type": "git",
@@ -36,18 +39,22 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "prisma": "^6.16.1",
-    "uuid": "^13.0.0",
+    "uuid": "^9.0.1",
     "winston": "^3.17.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.1",
     "@types/winston": "^2.4.4",
+    "cross-env": "^10.0.0",
     "jest": "^30.1.3",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.1",
+    "ts-jest": "^29.4.4",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
