--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "newrelic": "^13.4.0",
     "prisma": "^6.16.1",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
