--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -9,7 +9,7 @@ RUN apk add --no-cache openssl
 COPY package*.json ./
 
 # Instalar dependencias
-RUN npm ci && npm cache clean --force
+RUN npm ci
 
 # Copiar código fuente
 COPY . .
