--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,69 +1,31 @@
-FROM node:22-alpine AS builder
+FROM node:22-alpine
+
+RUN apk add --no-cache bash curl
 
 WORKDIR /app
 
-# Instalar herramientas necesarias
-RUN apk add --no-cache openssl
-
-# Copiar package.json y package-lock.json
+# PASO CRÍTICO 1: Copiar archivos de configuración y dependencias PRIMERO
+# Esto es una optimización importante de Docker: si estos archivos no cambian,
+# Docker reutilizará la capa cacheada de 'npm install' en builds futuros,
+# lo cual ahorra muchísimo tiempo
 COPY package*.json ./
+COPY tsconfig.json ./
+COPY newrelic.js ./
+COPY .prettierrc ./
+COPY .prettierignore ./
 
-# Instalar dependencias
-RUN npm ci
 
-# Copiar código fuente
-COPY . .
+# PASO CRÍTICO 2: Instalar TODAS las dependencias (incluyendo devDependencies)
+# Usamos 'npm install' en lugar de 'npm ci --only=production' porque necesitamos
+# herramientas como tsx, nodemon, typescript, etc. que están en devDependencies
+# Estas herramientas son esenciales para el hot reloading
+RUN npm install
 
-# Generar Prisma Client
-RUN npx prisma generate --schema=./src/shared/infrastructure/db/prisma/schema.prisma
 
-# Compilar TypeScript
-RUN npm run build
+COPY src ./src
 
-# ====================================
-# Etapa de producción
-# ====================================
-FROM node:22-alpine AS production
-
-WORKDIR /app
-
-# Instalar herramientas necesarias para Prisma
-RUN apk add --no-cache openssl curl
-
-# Crear usuario no-root para seguridad
-RUN addgroup -g 1001 -S 8js && \
-    adduser -S expressjs -u 1001
-
-# Copiar dependencias y archivos compilados desde builder
-COPY --from=builder --chown=expressjs:8js /app/node_modules ./node_modules
-COPY --from=builder --chown=expressjs:8js /app/dist ./dist
-COPY --from=builder --chown=expressjs:8js /app/package*.json ./
-COPY --from=builder --chown=expressjs:8js /app/src/shared/infrastructure/db/prisma ./prisma
-
-# Script de inicio que ejecuta migraciones
-RUN echo '#!/bin/sh' > /app/start.sh && \
-    echo 'set -e' >> /app/start.sh && \
-    echo '' >> /app/start.sh && \
-    echo 'echo "🔄 Running database migrations..."' >> /app/start.sh && \
-    echo 'npx prisma db push --schema=./prisma/schema.prisma --accept-data-loss' >> /app/start.sh && \
-    echo '' >> /app/start.sh && \
-    echo 'echo "🚀 Starting application..."' >> /app/start.sh && \
-    echo 'exec node dist/app/server.js' >> /app/start.sh && \
-    chmod +x /app/start.sh && \
-    chown expressjs:8js /app/start.sh
-
-# Cambiar a usuario no-root
-USER expressjs
-
-# Definir ARG con valor por defecto
 ARG PORT=3600
-
-# Exponer puerto dinámico
 EXPOSE ${PORT}
 
-# Health check dinámico
-HEALTHCHECK --interval=30s --timeout=3s --start-period=30s --retries=3 \
-    CMD curl -f http://localhost:${PORT}/api/v1/products || exit 1
 
-# Comando de inicio
-CMD ["/app/start.sh"]
+CMD ["sh", "-c", "npx prisma db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma && npm run dev"]
