--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node --env-file=.env dist/app/server.js",
     "build": "npx tsc",
+    "type-check": "npx tsc --noEmit",
     "dev": "npx tsx watch --env-file=.env.local --clear-screen=false src/app/server.ts",
     "dev:docker": "npx tsx watch --env-file=.env.docker --clear-screen=false src/app/server.ts",
     "prisma:generate": "npx prisma generate --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
