--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "prisma:migrate:prod": "npx prisma migrate deploy --name init --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:db:push": "npx prisma db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:migrate:reset": "npx prisma migrate reset --force --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
-    "test": "jest --config=tests/setup/jest.config.cjs",
-    "test:watch": "jest --config=tests/setup/jest.config.cjs --watch --verbose --runInBand",
-    "test:coverage": "jest --verbose  --config=tests/setup/jest.config.cjs --coverage",
-    "test:unit": "jest --verbose --config=tests/setup/jest.config.cjs --selectProjects unit",
-    "test:integration": "jest --config=tests/setup/jest.config.cjs --selectProjects integration",
+    "test": "jest --config=__tests__/setup/jest.config.cjs",
+    "test:watch": "jest --config=__tests__/setup/jest.config.cjs --selectProjects unit --watch --verbose --runInBand",
+    "test:coverage": "jest --verbose  --config=__tests__/setup/jest.config.cjs --coverage",
+    "test:unit": "jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects unit",
+    "test:integration": "jest --config=__tests__/setup/jest.config.cjs --selectProjects integration",
     "test:e2e:prepare": "node scripts/prepare-test-db.js",
-    "test:e2e": "npm run test:e2e:prepare && cross-env NODE_ENV=test jest --verbose --config=tests/setup/jest.config.cjs --selectProjects e2e --runInBand",
-    "test:e2e:run": "cross-env NODE_ENV=test jest --verbose --config=tests/setup/jest.config.cjs --selectProjects e2e --runInBand",
+    "test:e2e": "npm run test:e2e:prepare && cross-env NODE_ENV=test jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
+    "test:e2e:run": "cross-env NODE_ENV=test jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
     "test:e2e:docker": "node scripts/test-e2e.cjs",
     "test:e2e:fresh": "npm run test:e2e:stop && npm run test:e2e:docker",
     "test:e2e:stop": "docker stop postgres-test && docker rm postgres-test"
