--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,63 +152,63 @@ jobs:
   # ============================================
   # JOB 4: Build de Imagen Docker
   # ============================================
-  build:
-    name: Build Docker Image
-    runs-on: ubuntu-latest
-    # Este job necesita que los tests pasen primero
-    needs: [e2e-test]
+  # build:
+  #   name: Build Docker Image
+  #   runs-on: ubuntu-latest
+  #   # Este job necesita que los tests pasen primero
+  #   needs: [e2e-test]
 
-    # Permisos necesarios para subir imágenes a GitHub Container Registry
-    permissions:
-      contents: read
-      packages: write
+  #   # Permisos necesarios para subir imágenes a GitHub Container Registry
+  #   permissions:
+  #     contents: read
+  #     packages: write
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      # Configurar Docker Buildx para builds optimizados
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     # Configurar Docker Buildx para builds optimizados
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      # Login al registry de contenedores
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     # Login al registry de contenedores
+  #     - name: Log in to Container Registry
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ env.REGISTRY_USER }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Extraer metadata para tags de la imagen
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
-          tags: |
-            # Tag con el SHA del commit
-            type=sha,prefix={{branch}}-
-            # Tag con el nombre de la rama
-            type=ref,event=branch
-            # Tag "latest" solo para la rama main
-            type=raw,value=latest,enable={{is_default_branch}}
-            # Tag con versión semántica si es un release
-            type=semver,pattern={{version}}
+  #     # Extraer metadata para tags de la imagen
+  #     - name: Extract metadata
+  #       id: meta
+  #       uses: docker/metadata-action@v5
+  #       with:
+  #         images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+  #         tags: |
+  #           # Tag con el SHA del commit
+  #           type=sha,prefix={{branch}}-
+  #           # Tag con el nombre de la rama
+  #           type=ref,event=branch
+  #           # Tag "latest" solo para la rama main
+  #           type=raw,value=latest,enable={{is_default_branch}}
+  #           # Tag con versión semántica si es un release
+  #           type=semver,pattern={{version}}
 
-      # Construir y subir la imagen Docker
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          # Usar Dockerfile de producción, no Dockerfile.dev
-          file: ./Dockerfile
-          # Solo hacer push si estamos en main o develop
-          push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          # Cachear layers para builds más rápidos
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #     # Construir y subir la imagen Docker
+  #     - name: Build and push Docker image
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: .
+  #         # Usar Dockerfile de producción, no Dockerfile.dev
+  #         file: ./Dockerfile
+  #         # Solo hacer push si estamos en main o develop
+  #         push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}
+  #         tags: ${{ steps.meta.outputs.tags }}
+  #         labels: ${{ steps.meta.outputs.labels }}
+  #         # Cachear layers para builds más rápidos
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
 
   # ============================================
   # JOB 5: Escaneo de Seguridad
