--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node --env-file=.env dist/app/server.js",
     "build": "npx tsc",
     "type-check": "npx tsc --noEmit",
-    "dev": "npx tsx watch --env-file=.env.local --clear-screen=false src/app/server.ts",
-    "dev:docker": "npx tsx watch --env-file=.env.docker --clear-screen=false src/app/server.ts",
+    "dev": "npx tsx watch --env-file=.env --clear-screen=false src/app/server.ts",
     "prisma:generate": "npx prisma generate --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:migrate:dev": "npx prisma migrate dev --name init --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:migrate:prod": "npx prisma migrate deploy --name init --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
