refactor: update Prisma setup to v7 and switch to @prisma/adapter-pg
- Changed Prisma commands in package.json to use node directly with the adapter.
- Updated dependencies for Prisma and PostgreSQL.
- Refactored prisma.client.ts to utilize the new adapter and connection pooling.
- Removed DATABASE_URL from schema.prisma and added a new prisma.config.ts for configuration.
- Introduced Outbox model in schema.prisma for event sourcing.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build": "npx tsc",
     "type-check": "npx tsc --noEmit",
     "dev": "npx tsx watch --env-file=.env --clear-screen=false src/app/server.ts",
-    "prisma:generate": "npx prisma generate --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
-    "prisma:migrate:dev": "npx prisma migrate dev --name init --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
-    "prisma:migrate:prod": "npx prisma migrate deploy --name init --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
-    "prisma:db:push": "npx prisma db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
-    "prisma:migrate:reset": "npx prisma migrate reset --force --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
+    "prisma:generate": "node --env-file=.env ./node_modules/prisma/build/index.js generate --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
+    "prisma:migrate:dev": "node --env-file=.env ./node_modules/prisma/build/index.js migrate dev --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
+    "prisma:migrate:prod": "node --env-file=.env ./node_modules/prisma/build/index.js migrate deploy --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
+    "prisma:db:push": "node --env-file=.env ./node_modules/prisma/build/index.js db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
+    "prisma:migrate:reset": "node --env-file=.env ./node_modules/prisma/build/index.js migrate reset --force --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "test": "jest --config=__tests__/setup/jest.config.cjs",
     "test:watch": "jest --config=__tests__/setup/jest.config.cjs --selectProjects unit --watch --verbose --runInBand",
     "test:coverage": "jest --verbose  --config=__tests__/setup/jest.config.cjs --coverage",
@@ -24,16 +24,17 @@
     "test:e2e:docker": "node scripts/test-e2e.cjs",
     "test:e2e:fresh": "npm run test:e2e:stop && npm run test:e2e:docker",
     "test:e2e:stop": "docker stop postgres-test && docker rm postgres-test"
-
   },
   "dependencies": {
-    "@prisma/client": "^6.16.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "amqplib": "^0.10.9",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "newrelic": "^13.4.0",
-    "prisma": "^6.16.1",
+    "pg": "^8.16.3",
+    "prisma": "^7.2.0",
     "uuid": "^9.0.1",
     "winston": "^3.17.0",
     "zod": "^4.1.8"
@@ -45,6 +46,7 @@
     "@types/jest": "^30.0.0",
     "@types/newrelic": "^9.14.8",
     "@types/node": "^24.3.1",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.1",
     "@types/winston": "^2.4.4",
