fix: update test:watch script to include all test projects and add dotenv dependency

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prisma:db:push": "node --env-file=.env ./node_modules/prisma/build/index.js db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:migrate:reset": "node --env-file=.env ./node_modules/prisma/build/index.js migrate reset --force --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "test": "jest --config=__tests__/setup/jest.config.cjs",
-    "test:watch": "jest --config=__tests__/setup/jest.config.cjs --selectProjects unit --watch --verbose --runInBand",
+    "test:watch": "jest --config=__tests__/setup/jest.config.cjs --selectProjects unit,e2e,integration --watchAll --verbose --runInBand",
     "test:coverage": "jest --verbose  --config=__tests__/setup/jest.config.cjs --coverage",
     "test:unit": "jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects unit",
     "test:integration": "jest --config=__tests__/setup/jest.config.cjs --selectProjects integration",
@@ -51,6 +51,7 @@
     "@types/uuid": "^9.0.1",
     "@types/winston": "^2.4.4",
     "cross-env": "^10.0.0",
+    "dotenv": "^17.2.4",
     "jest": "^30.1.3",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
