feat: load environment variables from .env file in test setup and update Jest configuration

--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "prisma:migrate:prod": "node --env-file=.env ./node_modules/prisma/build/index.js migrate deploy --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:db:push": "node --env-file=.env ./node_modules/prisma/build/index.js db push --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
     "prisma:migrate:reset": "node --env-file=.env ./node_modules/prisma/build/index.js migrate reset --force --schema=./src/shared/infrastructure/db/prisma/schema.prisma",
-    "test": "jest --config=__tests__/setup/jest.config.cjs",
-    "test:watch": "jest --config=__tests__/setup/jest.config.cjs --selectProjects unit,e2e,integration --watchAll --verbose --runInBand",
-    "test:coverage": "jest --verbose  --config=__tests__/setup/jest.config.cjs --coverage",
-    "test:unit": "jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects unit",
-    "test:integration": "jest --config=__tests__/setup/jest.config.cjs --selectProjects integration",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=__tests__/setup/jest.config.cjs",
+    "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=__tests__/setup/jest.config.cjs --selectProjects unit,e2e,integration --watchAll --verbose --runInBand",
+    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose  --config=__tests__/setup/jest.config.cjs --coverage",
+    "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects unit",
+    "test:integration": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=__tests__/setup/jest.config.cjs --selectProjects integration",
     "test:e2e:prepare": "node scripts/prepare-test-db.js",
-    "test:e2e": "npm run test:e2e:prepare && cross-env NODE_ENV=test jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
-    "test:e2e:run": "cross-env NODE_ENV=test jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
+    "test:e2e": "npm run test:e2e:prepare && cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
+    "test:e2e:run": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
     "test:e2e:docker": "node scripts/test-e2e.cjs",
     "test:e2e:fresh": "npm run test:e2e:stop && npm run test:e2e:docker",
     "test:e2e:stop": "docker stop postgres-test && docker rm postgres-test"
