--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:unit": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects unit",
     "test:integration": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --config=__tests__/setup/jest.config.cjs --selectProjects integration",
     "test:e2e:prepare": "node scripts/prepare-test-db.js",
-    "test:e2e": "npm run test:e2e:prepare && cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
-    "test:e2e:run": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --verbose --config=__tests__/setup/jest.config.cjs --selectProjects e2e --runInBand",
+    "test:e2e": "npm run test:e2e:prepare && node scripts/run-e2e-tests.cjs",
+    "test:e2e:run": "node scripts/run-e2e-tests.cjs",
     "test:e2e:docker": "node scripts/test-e2e.cjs",
     "test:e2e:fresh": "npm run test:e2e:stop && npm run test:e2e:docker",
     "test:e2e:stop": "docker stop postgres-test && docker rm postgres-test"
