chore: update VSCode settings and tasks for improved terminal behavior

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
   "workbench.colorCustomizations": {
     "sideBar.background": "#09331c"
   },
+  "terminal.integrated.hideOnStartup": "always",
+  "terminal.integrated.enablePersistentSessions": false,
+  "terminal.integrated.persistentSessionReviveProcess": "never"
 }
