--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,8 +7,8 @@
       "command": "docker logs -f ecommerce-order-product-service",
       "presentation": {
         "reveal": "always",
-        "panel": "dedicated",
-        "group": "logs",
+        "panel": "shared",
+        "focus": true,
         "showReuseMessage": false,
         "clear": true
       },
